--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>[Name] [Surname] - Recruitment task</title>
+    <title>Łukasz Woźniakowski - Recruitment task</title>
+    <link rel="stylesheet" href="./dist/main.css">
 </head>
-<body>
 
+<body>
+    <section>
+        <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg" alt="image">
+        <h1>Lorem ipsum</h1>
+        <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy
+            infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
+        <button class="eventButton">Button</button>
+    </section>
+
+    <div class="popup">
+        <h1>Alert!</h1>
+        <p>"You have clicked <b class="counting"></b> to related button."</p>
+    </div>
+
+    <script src="./dist/all.js"></script>
 </body>
