--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="main-module">
         <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg" alt="image">
         <h1>Lorem ipsum</h1>
         <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy
@@ -19,8 +19,12 @@
     </section>
 
     <div class="popup">
-        <h1>Alert!</h1>
-        <p>"You have clicked <b class="counting"></b> to related button."</p>
+        <div class="content">
+            <div class="closeButton">&times;</div>
+            <h1>Alert!</h1>
+            <p>"You have clicked <b class="counting"></b> to related button."</p>
+            <button class="resetButton">Reset</button>
+        </div>
     </div>
 
     <script src="./dist/all.js"></script>
