--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 
 <body>
     <section class="main-module">
-        <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_596.jpg" alt="image">
-        <h1>Lorem ipsum</h1>
-        <p>Infinitely scalable, feature-rich and cloud-native data management and protection for modern and legacy
-            infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
-        <button class="eventButton">Button</button>
+        <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_4_3,c_fill,g_auto__c_scale,w_538.jpg" alt="image"
+            class="main-module--img-hero">
+
+        <div class="main-module--content">
+            <h1>Lorem ipsum</h1>
+            <p>Infinitely scalable, feature-rich and cloud-native data management and
+                protection for modern and legacy
+                infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
+            <button class="eventButton">Button</button>
+        </div>
     </section>
 
     <div class="popup">
