--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <button class="resetButton">Reset</button>
         </div>
     </div>
+    <div class="overlay"></div>
 
     <script src="./dist/all.js"></script>
 </body>
