Added new file scss, change position elements and improvments

--- a/index.html
+++ b/index.html
@@ -10,25 +10,27 @@
 </head>
 
 <body>
-    <section class="main-module">
-        <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_4_3,c_fill,g_auto__c_scale,w_538.jpg" alt="image"
-            class="main-module--img-hero">
+    <div class="main-module">
+        <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_720.jpg"
+            alt="Beach with sunset in the background" class="main-module--img-hero">
 
-        <div class="main-module--content">
-            <h1>Lorem ipsum</h1>
-            <p>Infinitely scalable, feature-rich and cloud-native data management and
+        <div class="content">
+            <h1 class="title">Lorem Ipsum</h1>
+            <p class="copy">Infinitely scalable, feature-rich and cloud-native data management and
                 protection for modern and legacy
                 infrastructures and SaaS platforms, managed via a single app with no hardware required.</p>
-            <button class="eventButton">Button</button>
+            <button class="eventBtn">Button</button>
         </div>
-    </section>
+    </div>
 
     <div class="popup">
-        <div class="content">
-            <div class="closeButton">&times;</div>
-            <h1>Alert!</h1>
-            <p>"You have clicked <b class="counting"></b> to related button."</p>
-            <button class="resetButton">Reset</button>
+        <div class="popupContent">
+            <div class="closeBtn"></div>
+            <h1 class="title">Alert!</h1>
+            <p class="copy">
+                "You have clicked <b class="count"></b> to related button."
+            </p>
+            <button class="resetBtn">Reset</button>
         </div>
     </div>
     <div class="overlay"></div>
