Added RWD and finish task

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="author" content="Łukasz Woźniakowski">
     <title>Łukasz Woźniakowski - Recruitment task</title>
     <link rel="stylesheet" href="./dist/main.css">
 </head>
 
 <body>
     <div class="main-module">
-        <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_ar_16_9,c_fill,g_auto__c_scale,w_720.jpg"
-            alt="Beach with sunset in the background" class="main-module--img-hero">
+        <img src="./images/sean-o-KMn4VEeEPR8-unsplash_1_s6zmfh_c_scale,w_1400.jpg"
+            alt="Beach with sunset in the background" class="image">
 
         <div class="content">
             <h1 class="title">Lorem Ipsum</h1>
